# bayou

./: .gitattributes  .gitignore  .~lock.Gloomthorn Card List and Animation Prompts.odt#  CMakeLists.txt  Directory.Build.props  Gloomthorn Card List and Animation Prompts.odt  TLS.md  agents.md  build.bat  build_debug.bat  build_release.bat  card-cost-guidline.txt  cardeditor.cfg  cards.txt  client.cfg  client_debug.cfg  client_release.cfg  configure.bat  debug_accounts.bat  debug_cardeditor.bat  debug_cardserver.bat  debug_client.bat  debug_conquesttest.bat  debug_gameserver.bat  debug_gametest.bat  debug_matchmaking.bat  debug_services.bat  ensure_dev_tls.bat  gameserver.cfg.example  main.cpp  push_cards.bat  release_accounts.bat  release_cardeditor.bat  release_cardserver.bat  release_conquesttest.bat  release_gameserver.bat  release_gametest.bat  release_matchmaking.bat  release_services.bat  requirements-seed.txt  (+12 more)
.codex/agents/: local-explorer.toml  local-implementer.toml  local-reviewer.toml  local-test-analyzer.toml
assets/animations/: groveSister-walk.pdn
assets/animations/dark-fairy-flying/: animation.json
assets/conquest/maps/: dark-realms.json
deploy/: README.md  bayou-accounts.service  bayou-cardserver.service  bayou-cardserver.service.in  bayou-gameserver.service  bayou-matchmaking.service  bayou-payments.service  build-cardserver-linux.sh  build-servers-linux.sh  deploy-cached-servers-linux.sh  install-cardserver-linux.sh  install-servers-linux.sh  package-client-release.ps1  stripe-payments.md
src/: button.cppm  main.cpp  math.cppm
src/accounts/: account_catalog.cpp  account_catalog.hpp  account_conquest.cpp  account_conquest.hpp  account_conquest_events.cpp  account_conquest_events.hpp  account_decks.cpp  account_decks.hpp  account_rate_limiter.cpp  account_rate_limiter.hpp  account_security.cpp  account_security.hpp  account_tokens.cpp  account_tokens.hpp  main.cpp
src/cardeditor/: main.cpp
src/cardserver/: main.cpp
src/client/: button.cppm  card_editor_assets.cpp  card_editor_assets.hpp  card_editor_screen.cppm  client_board_layout.cpp  client_board_layout.hpp  client_card_text.cpp  client_card_text.hpp  client_clock_warning.hpp  client_config.cpp  client_config.hpp  client_controls.cppm  client_display.cpp  client_display.hpp  client_sandbox.cpp  client_sandbox.hpp  client_services.cppm  client_string.cpp  client_string.hpp  client_textures.cpp  client_textures.hpp  client_ui.cpp  client_ui.hpp  conquest_screen.cppm  conquest_services.cppm  deck_collection.cpp  deck_collection.hpp  inputbox.cppm  main.cpp
src/client/screens/: admin_users_screen.inl  deck_editor_popup.inl  deck_editor_screen.inl  deck_select_screen.inl  game_screen.inl  shop_screen.inl  story_intro_screen.inl
src/conquesttest/: main.cpp
src/gameserver/: ai_deck.cpp  ai_deck.hpp  ai_player.cpp  ai_player.hpp  conquest_battle_manager.cpp  conquest_battle_manager.hpp  game_action.hpp  game_engine.hpp  main.cpp
src/gametest/: main.cpp
src/matchmaking/: main.cpp
src/payments/: run_stripe_local.py  stripe_coin_service.py
src/shared/: account_data.hpp  card_data.hpp  card_database.cpp  card_database.hpp  card_server_client.cpp  card_server_client.hpp  card_source_config.cpp  card_source_config.hpp  conquest_data.hpp  conquest_event_data.hpp  conquest_map.hpp  deck_data.hpp  game_data.hpp  game_rules.hpp  inputbox.cppm  listener_retry.hpp  network.cppm  network.hpp  network_messages.inc  ranking.hpp  socket_timeout.hpp  tls_socket.cpp  tls_socket.hpp
tools/: PngAlphaRepair.cs  run_png_alpha_repair.bat
